syntax = "proto3";

package Common.Proto.Player;
import "Base/NetError.proto";
import "Player/NetCharacter.proto";

message CharacterCreateRequest {
    string name = 1;
    int32 job_id = 2;
}

message CharacterCreateResponse {
    Base.NetError error = 1;
    NetCharacter character = 3;
}