syntax = "proto3";

package Common.Proto.Player;
import "Player/NetCharacter.proto";

message CharacterListRequest {
}

message CharacterListResponse {
    repeated NetCharacter character_list = 1;
}